[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/8-Bit Madness.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Objects/UI and Menus/Player System/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MainMenu/LinkMenu.gd" type="Script" id=4]
[ext_resource path="res://Design and Prototypes/twitterlogo_1x.png" type="Texture" id=5]
[ext_resource path="res://Design and Prototypes/Patreon_logo.png" type="Texture" id=6]
[ext_resource path="res://Design and Prototypes/twitch_PNG22.png" type="Texture" id=7]
[ext_resource path="res://Design and Prototypes/Youtube-logo-2017-640x480.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = -480.0
margin_right = -480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_right = 1280.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 640, 0 )
size_flags_horizontal = 0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=red]Rose and Thorn"
text = "Rose and Thorn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 640, 0 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=red]Tech Demo 2"
text = "Tech Demo 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
margin_left = 600.0
margin_top = 50.0
margin_right = 680.0
margin_bottom = 132.0

[node name="MainMenu" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 75.0
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="CanvasLayer/Control/PanelContainer/MainMenu"]
margin_right = 66.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_right = NodePath(".")
text = "Start"

[node name="OptionsButton" type="Button" parent="CanvasLayer/Control/PanelContainer/MainMenu"]
margin_top = 24.0
margin_right = 66.0
margin_bottom = 44.0
text = "Options"

[node name="OptionsMenu" parent="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton" instance=ExtResource( 3 )]
visible = false
margin_left = 71.0793
margin_top = -31.0164
margin_right = 164.079
margin_bottom = 50.9836

[node name="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton/OptionsMenu" index="0"]
margin_right = 149.0
margin_bottom = 75.0

[node name="CloseMenuButton" parent="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton/OptionsMenu/VBoxContainer" index="0"]
margin_right = 142.0
focus_neighbour_top = NodePath("../ControlsMenuButton")
focus_neighbour_right = NodePath(".")

[node name="UpgradeMenuButton" parent="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton/OptionsMenu/VBoxContainer" index="1"]
margin_right = 142.0
focus_neighbour_top = NodePath("../CloseMenuButton")
focus_neighbour_right = NodePath(".")

[node name="ControlsMenuButton" parent="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton/OptionsMenu/VBoxContainer" index="2"]
margin_right = 142.0
focus_neighbour_top = NodePath("../UpgradeMenuButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../CloseMenuButton")

[node name="InputActionList" parent="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton/OptionsMenu/VBoxContainer/ControlsMenuButton/ControlsMenu/ControlsPanel/ScrollContainer" index="0"]
margin_bottom = 324.0

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/PanelContainer/MainMenu"]
margin_top = 48.0
margin_right = 66.0
margin_bottom = 68.0
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Exit"

[node name="LinkMenu" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_left = 774.0
margin_top = 101.0
margin_right = 790.0
margin_bottom = 172.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwitterButton" type="TextureButton" parent="CanvasLayer/Control/LinkMenu"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )

[node name="PatreonButton" type="TextureButton" parent="CanvasLayer/Control/LinkMenu"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
texture_normal = ExtResource( 6 )

[node name="TwitchButton" type="TextureButton" parent="CanvasLayer/Control/LinkMenu"]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 56.0
texture_normal = ExtResource( 7 )

[node name="YTButton" type="TextureButton" parent="CanvasLayer/Control/LinkMenu"]
margin_top = 60.0
margin_right = 16.0
margin_bottom = 71.0
texture_normal = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/MainMenu/StartButton" to="CanvasLayer/Control/PanelContainer/MainMenu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton" to="CanvasLayer/Control/PanelContainer/MainMenu" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/MainMenu/ExitButton" to="CanvasLayer/Control/PanelContainer/MainMenu" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/LinkMenu/TwitterButton" to="CanvasLayer/Control/LinkMenu" method="_on_TwitterButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/LinkMenu/PatreonButton" to="CanvasLayer/Control/LinkMenu" method="_on_PatreonButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/LinkMenu/TwitchButton" to="CanvasLayer/Control/LinkMenu" method="_on_TwitchButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/LinkMenu/YTButton" to="CanvasLayer/Control/LinkMenu" method="_on_YTButton_pressed"]

[editable path="CanvasLayer/Control/PanelContainer/MainMenu/OptionsButton/OptionsMenu"]
